# HydroRoll

./: .editorconfig  .eslintignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  README.rst  config.toml  data.csv  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  test.py  tsconfig.json  tsconfig.project.json  turbo.json  vercel.json
.github/: config.yml  dependabot.yml
.github/workflows/: build-api.yml  changelog.yml  docs.yml  release.yml
ChienDice/: config.toml
ChienDice/data/: bot_info.json
ChienDice/plugins/iamai_plugin_base/: config.py
ChienDice/plugins/iamai_plugin_bot_info/: __init__.py
GetPlayerCard/: README.rst  cargo.toml  pyproject.toml
GetPlayerCard/get_pc/: version.py
GetPlayerCard/src/: lib.rs
GetPlayerCard/tests/: tests_jinja2.py  tests_json.py
GetPlayerCard/tests/data/: coc7.json
HRC/: .gitignore  CHANGELOG.md  CONTRIBUTING.rst  Cargo.toml  README.rst  noxfile.py  pyproject.toml
HRC/.github/: config.yml
HRC/.github/workflows/: release.yml
HRC/docs/: Makefile  requirements.txt
HRC/docs/_static/: .$Structures.svg.bkp  .$Structures.svg.dtmp
HRC/docs/source/: COPYING.md  changelog.md  conf.py  index.rst
HRC/docs/source/pages/: quick-start.rst
HRC/examples/: brp_character.py  config.toml  main.py
HRC/examples/rules/COC/: Character.py  Command.py  Wiki.py  __init__.py
HRC/hrc/: config.py  core.py  event.py
HRC/hrc/dev/: __init__.py
HRC/src/: lib.rs
HRC/tests/: test_BRP_pdfquery.py  test_BaseRule.py  test_corelib.py
HydroRoll/: __init__.py  bot.py  config.py  config.toml  hugo.toml  main.py
HydroRoll/Hydro/: __init__.py  roll.py
HydroRoll/Hydro/iamai_plugin_dice/: __init__.py
HydroRoll/plugins/: Hydro.py  plugin.py
HydroRoll/plugins/HydroRoll_plugin_base/: __init__.py
HydroRoll/plugins/HydroRoll_plugin_bot/: __init__.py  config.py
HydroRoll/plugins/HydroRoll_plugin_dice/: __init__.py  config.py
HydroRoll/plugins/HydroRoll_plugin_echo/: __init__.py  config.py
HydroRoll/plugins/HydroRoll_plugin_luck/: __init__.py  config.py
HydroRoll/plugins/HydroRoll_plugin_send/: __init__.py  config.py
HydroRoll/plugins/HydroRoll_plugin_system/: __init__.py  config.py
HydroRoll/plugins/iamai_plugin_base/: __init__.py  config.py
HydroRoll/plugins/iamai_plugin_bot_info/: config.py
docs/: Makefile  next.config.js  package-lock.json  package.json  requirements.txt  sentry.properties  theme.config.js  vercel.json
docs/api/: index.py  roots.py
docs/assets/: 未命名绘图.drawio
docs/components/: Authors.tsx  Avatar.tsx  ExamplesArea.tsx  ExtraContent.tsx  Footer.tsx  HydroRollTRPGFeatures.tsx  HydroRollTRPGQuickstart.tsx  Navigation.tsx  QuickStart.tsx  RemoteCacheCounter.tsx  SiteSwitcher.tsx  Social.tsx
docs/content/: features.ts  team.ts
docs/data/: roots.txt
docs/lib/: ConvertKitApi.ts  useTurborepoMinutesSaved.ts
docs/pages/: _meta.json  blog.mdx  index.mdx  privacy.mdx  showcase.mdx  terms.mdx
docs/scripts/: generate-rss.js
docs/source/: conf.py  index.rst  restful.rst
envshare/app/: header.tsx  layout.tsx  page.tsx
example/: config.example.toml  config.toml  main.py
example/plugins/: lua.py  psi.py  r.py  show.py
examples/: config.toml
examples/basic/: pnpm-lock.yaml
examples/kitchen-sink/: pnpm-lock.yaml
examples/non-monorepo/: package.json
examples/plugins/: cachetool.py  lua.py  nivis.❄  snow.nivis
examples/with-changesets/: pnpm-lock.yaml
examples/with-gatsby/: pnpm-lock.yaml
examples/with-npm/: package-lock.json
examples/with-rollup/: pnpm-lock.yaml
examples/with-svelte/: pnpm-lock.yaml
examples/with-vite/: pnpm-lock.yaml
hydro_roll/: __init__.py  cli.py
hydroroll/: bot.py  config.py  utils.py
hydroroll/core/: __init__.py
hydroroll/plugins/: test.py
infini/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
infini/.github/: release-drafter.yml
infini/.github/workflows/: codeql.yml  python-publish.yml
infini/docs/: Makefile  requirements.txt
infini/docs/source/: changelog.md  conf.py  index.md  license.md  quick-start.md
infini/docs/source/pages/: injector.md  internal.md  register.md
infini/docs/source/pages/api/: infini.core.rst  infini.input.rst  infini.interceptor.rst  infini.internal.rst  infini.logging.rst  infini.register.rst  infini.router.rst  infini.rst
infini/src/infini/: core.py  doc.py  exceptions.py  generator.py  handler.py  injector.py  input.py  interceptor.py  internal.py  loader.py  logging.py  output.py  queue.py  register.py  router.py  typing.py
infini/tests/: test_core.py  test_generator.py  test_handlers.py  test_injector.py  test_input.py  test_interceptor.py  test_internal.py  test_loader.py  test_register.py  test_workflow.py
infini/tests/examples/ndice/: infini.toml  tests.py
infini/tests/examples/ndice/src/: dicer.py  ndice.py
modules/HydroRoll/: cli.py
modules/HydroRollCore/: LibCore.pyi  __init__.py  cli.py  dependencies.py  exceptions.py  log.py  typing.py  utils.py
modules/OneRoll/: __init__.py  cli.py  utils.py
modules/TRPGNivisSDK/: __init__.py  exception.py  execution.py  interpreter.py  lexer.py  parsers.py
plugins/alicebot_plugin_base/: __init__.py  config.py
plugins/alicebot_plugin_dice/: __init__.py  config.py
plugins/alicebot_plugin_echo/: __init__.py  config.py
plugins/alicebot_plugin_luck/: __init__.py  config.py
plugins/alicebot_plugin_reply/: __init__.py  config.py
plugins/alicebot_plugin_send/: __init__.py  config.py
site/: config.toml  hugo.toml  index.html  package-lock.json  package.json  vite.config.ts
site/public/: index.html  index.xml  sitemap.xml
site/src/: App.vue  main.ts  vite-env.d.ts
src/: lib.rs
src/HydroRoll/: cli.py
test/: config.toml  main.py
tests/: config.toml  cos.h5  lua_in_python.py  main.py  test.py  test_sqlite3.py
tests/data/: bot_info.json
tests/plugins/: _bradge-kook-cqhttp.py  _show.py  e.py  exc.py  r.py  show.py  test.py  test2.py
tests/rules/: rule-1.py
tests/web/: server.py
(+326 files in other folders)
