[package]
name = "hydro_roll"
version = "0.1.8-alpha.2"
edition = "2021"
description = "A simple rust library for HydroRoll."
license = "MIT"
documentation = "https://docs.hydroroll.team/"
homepage = "https://hydroroll.team/"
repository = "https://github.com/HydroRoll-Team/HydroRoll"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hydro_roll"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
