[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "hydro_roll"
dynamic = ["version"]
description = "HydroRoll System."
authors = [
    {name = "简律纯", email = "i@jyunko.cn"},
]
dependencies = [
    "watchfiles<1.0.0,>=0.18.0",
    "joblib>=1.3.2",
    "randomgen>=1.26.0",
    "jieba>=0.42.1",
    "scikit-learn>=1.3.1",
    "requests>=2.31.0",
    "apscheduler>=3.10.4",
    "lupa>=2.0",
    "windows-curses>=2.3.2",
    "lark>=1.1.8",
    "cachetools>=5.3.2",
    "iamai[onebot11]>=0.0.2",
]
requires-python = ">=3.8"
long_description_content_type = "text/x-rst; charset=UTF-8"
readme.file = "README.rst"
license = {text = "MIT"}
keywords = ["bot", "qq", "qqbot", "mirai", "coolq", "gensokyo", "dice", "hydroroll"]
classifiers = [
    "Development Status :: 5 - Production/Stable", 
    "Framework :: Robot Framework", 
    "Framework :: Robot Framework :: Library", 
    "Operating System :: OS Independent", 
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
homepage = "https://hydroroll.team/"
repository = "https://github.com/HydroRoll-Team/HydroRoll"
documentation = "https://docs.hydroroll.team/"

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.pdm.dev-dependencies]
dev = [
    "pip>=24.0",
]
