[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "get-pc"
dynamic = ["version"]
description = "Experimentally get your character card through an object-oriented program"
authors = [{ name = "简律纯", email = "leader@hydroroll.team" }]
dependencies = [
    "pydantic>=2.8.2",
    "loguru>=0.7.2",
    "textual-dev>=1.5.1",
    "jinja2>=3.1.4",
]
requires-python = ">=3.10"
readme = "README.rst"
license = { text = " AGPL-3.0" }

[project.urls]
homepage = "https://get-pc.hydroroll.team/"
repository = "https://github.com/HydroRoll-Team/GetPlayerCard"
documentation = "https://get-pc.hydroroll.team/"

[project.scripts]
get-pc = "get_pc.cli:Cli"
getplayercard = "get_pc.cli:Cli"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.10
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = ["ALL"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = true

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.maturin]
module-name = "get_pc.LibCore"

[tool.pdm.dev-dependencies]
docs = [
    "furo>=2024.8.6",
    "sphinx-autobuild>=2024.4.16",
    "myst-parser>=4.0.0",
    "sphinx>=8.0.2",
    "tomli>=2.0.1",
    "sphinx-design>=0.6.1",
    "sphinx-intl>=2.2.0",
]
lint = [
    "ruff>=0.6.2",
]
dev = [
    "nox>=2024.4.15",
    "maturin>=1.7.1",
    "pytest>=8.3.2",
    "logfire>=0.51.0",
    "pip>=24.2",
]