[package]
name = "hydro-roll-core"
version = "0.0.3"
edition = "2021"
description = "Core Lib for HydroRoll System."
license = "MIT"
documentation = "https://core.hydroroll.team/"
homepage = "https://core.hydroroll.team/"
repository = "https://github.com/HydroRoll-Team/HydroRollCore"
authors = ["HsiangNianian <i@jyunko.cn>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19.2", features = ["abi3-py39", "extension-module"] }
clap = { version = "4.0", features = ["derive"] }
rand = "0.8.5"
