[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "hydro-roll-core"
dynamic = ["version"]
description = "Core of HydroRoll SDK."
authors = [{ name = "简律纯", email = "leader@hydroroll.team" }]
dependencies = [
    "pdfquery>=0.4.3",
    "pydantic>=2.7.4",
    "loguru>=0.7.2",
]
requires-python = ">=3.9"
readme = "README.rst"
license = { text = " AGPL-3.0" }

[project.urls]
homepage = "https://core.hydroroll.team/"
repository = "https://github.com/HydroRoll-Team/HydroRollCore"
documentation = "https://core.hydroroll.team/"

[project.scripts]
hrc = "hrc.cli:Cli"
hydrorollcore = "hrc.cli:Cli"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.8
target-version = "py38"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.maturin]
module-name = "hrc.LibCore"

[tool.pdm.dev-dependencies]
docs = [
    "furo>=2024.1.29",
    "sphinx-autobuild>=2024.4.16",
    "myst-parser>=3.0.1",
    "sphinx>=7.3.7",
    "tomli>=2.0.1",
    "sphinx-design>=0.5.0",
    "sphinx-intl>=2.1.0",
]
lint = [
    "ruff>=0.3.0",
]
dev = [
    "nox>=2024.4.15",
    "maturin>=1.5.1",
    "pytest>=8.3.1",
]

