[project]
name = "infini"
version = "2.1.15"
description = "Infini 内容输入输出流框架"
authors = [
    { name = "苏向夜", email = "fu050409@163.com" },
    { name = "简律纯", email = "leader@hydroroll.team" },
]
dependencies = [
    "rich>=13.7.0",
    "jinja2>=3.1.3",
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
Homepage = "https://infini.hydroroll.team"
Documentation = "https://infini.hydroroll.team"
Repository = "https://github.com/HydroRoll-Team/infini"
Changelog = "https://infini.hydroroll.team/zh_CN/latest/changelog.html"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.4",
    "ipdm>=0.1.4",
]
docs = [
    "sphinx>=7.1.2",
    "sphinx-intl>=2.1.0",
    "sphinx-design>=0.5.0",
    "tomli>=2.0.1",
    "myst-parser>=2.0.0",
    "sphinx-autobuild>=2021.3.14",
    "furo>=2024.1.29",
]
